[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/trading/cinematics/spaceship_takeoff0201-0400.ogv" type="VideoStream" id=1]
[ext_resource path="res://TradingScene.gd" type="Script" id=2]
[ext_resource path="res://assets/trading/cinematics/spaceship_landing0000-0199.ogv" type="VideoStream" id=3]
[ext_resource path="res://assets/trading/backgrounds/landing0200_blurred.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("bg_blurred:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="takeoff" type="VideoPlayer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="landing" type="VideoPlayer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_blurred" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="fade_bg" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )

[connection signal="finished" from="landing" to="." method="_on_landing_finished"]
[connection signal="animation_finished" from="fade_bg" to="." method="_on_fade_bg_animation_finished"]
